# rldyour-claudecode

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  package.json  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.gds/: bundle.lock.yaml  compiled-policy.json  repository.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/branch-protection/: main.json
.github/workflows/: README.md  actionlint.yml  claude-cli-drift.yml  codeql.yml  cross-platform.yml  dependency-check.yml  dependency-review.yml  gitleaks.yml  pytest.yml  release.yml  scorecard.yml  semgrep.yml  validate.yml
.serena/: project.yml
.serena/memories/: ADR-01-CORE.md  BROWSER-01-WORKFLOW.md  CI-01-ACTIONS.md  CLAUDE-01-ADAPTER-SURFACE.md  CLAUDECODE-01-PLUGIN-CANON.md  CONTEXT-01-CORE.md  CORE-01-INDEX.md  CORE-02-MARKETPLACE.md  DEPLOY-01-RUNTIME.md  DESIGN-01-WORKFLOW.md  DOCS-01-INSTRUCTIONS.md  EXPLORE-01-RESEARCH.md  FLOW-01-SDLC.md  FUTURE-01-VISION.md  HOOKS-01-LIFECYCLE.md  ISSUES-01-VERIFIED-PROBLEMS.md  LSP-01-LANGUAGE-SERVERS.md  LSPS-01-LANGUAGE-SERVERS.md  MCP-01-TRANSPORT.md  PATTERNS-01-CANONICAL.md  RELEASE-01-VALIDATION.md  (+13 more)
config/: REVIEW.md.template  cc-canon.json  marketplace-policy.json  mcp-runtime-versions.env  rldyour-contract.json  skill-routing-policy.json  text-hygiene-allowlist.json
docs/: contract-matrix.md  dependency-updates.md  observability.md  release-process.md  rollback-restore.md  runtime-env.md
references/: claude-baseline.json  claude-surface-adoption.md  ry-start-workflow-contract.md
scripts/: _mcp_parse.py  bootstrap_check.sh  check_mcp_runtime_versions.py  collect_diagnostics.sh  generate_contract_matrix.py  generate_inventory.py  install-rldyour-marketplace.sh  install_local_git_hooks.sh  probe_mcp_upstream.py  refresh_actions_pins.sh  release_manifest.py  smoke_bootstrap_check.sh  smoke_fullrepo_sync.sh  smoke_hooks.sh  smoke_mcp_capabilities.sh  smoke_mcp_runtime.sh  smoke_serena_memory_taxonomy.sh  sync_fullrepo_branch.sh  validate_agent_tools.py  validate_boundaries.py  validate_browser_provider_policy.py  validate_claude_surface_adoption.py  validate_command_skill_drift.py  validate_contract.py  validate_docs_canon.py  validate_hook_docs_against_json.py  validate_instruction_docs.py  validate_instruction_sync.py  validate_json_schemas.py  validate_marketplace.sh  validate_mcps_description_parity.py  validate_plugin_versions.py  validate_release_state.py  validate_reviewer_contracts.sh  validate_skill_allowed_tools.py  validate_skill_routing.py  validate_stop_hook_docs.py  validate_text_hygiene.py  worktree_add.sh
tests/: conftest.py  test_check_mcp_runtime_versions.py  test_flow_stop_state.py  test_generate_inventory.py  test_mcp_parse.py  test_probe_mcp_upstream.py  test_serena_memory_state.py  test_shared_workflow_pin.py  test_validate_agent_tools.py  test_validate_boundaries.py  test_validate_browser_provider_policy.py  test_validate_claude_surface_adoption.py  test_validate_command_skill_drift.py  test_validate_contract.py  test_validate_docs_canon.py  test_validate_instruction_docs.py  test_validate_instruction_sync.py  test_validate_json_schemas.py  test_validate_plugin_versions.py  test_validate_release_state.py  test_validate_skill_allowed_tools.py  test_validate_skill_routing.py  test_validate_text_hygiene.py
(+150 files in other folders)
